fixed horizontal scroll issue
fixed the elements which were too big creating horizontal scroll

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,12 @@
+html{
+  width: 100%;
+}
+
 body{
   font-family: sans-serif;
   font-size:110%;
   background-color: #FCF7F8;
-  /* margin: 0; */
+  width: 100%;
   
 }
 
@@ -24,6 +28,13 @@ aside {
   top: 0;
 }
 
+.navbar-brand{
+  margin-left: 10px;
+}
+.navbar-toggler{
+  margin-right: 10px;
+}
+
 article {
   width: 80%;
   border:none;
@@ -38,7 +49,13 @@ section {
   position: relative;
   
 }
+#mymodal{
+  width: 100%;
+}
 
+.modal-dialog{
+  width: 100%;
+}
 
 .social-media-heading{
   /* margin-top: 0; */
@@ -109,7 +126,7 @@ a{
 .section-text {
   color: #cad2c5;
   position: relative;
-  left: 10px;
+  /* left: 10px; */
 }
 
 
@@ -278,4 +295,12 @@ aside > .section-container {
 
 .modal-content{
   background-color: #7b8cde;
+}
+
+.navbar-collapse.in {
+  display: block !important;
+}
+
+.carousel-item{
+  height: 32rem;
 }
